# rping

./: Cargo.toml
report/: design.aux  design.drawio  design.fdb_latexmk  design.fls  design.out  design.tex  design.xdv
report/_minted-design/: 44BAFFA267A79712423DC320446FCCF35447C38F7A74419EFE0865379BF2190D.pygtex  B113E6A34D159C5A1BAFFAB410ABBCEA332AE3F1565BD740E6FE6F4B499B8294.pygtex  DE28840399FCA138D355E3EFD8B649115447C38F7A74419EFE0865379BF2190D.pygtex
src/: main.rs  pinger.rs  plot_data.rs  test.rs
