[package]
name = "rping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.7.0"
clap = {version= "3.2.6", features = ["derive"]}
crossterm = "0.23.2"
dns-lookup = "1.0.8"
futures = "0.3.21"
humantime = "2.1.0"
itertools = "0.10.3"
log = "0.4.17"
nix = { path = "../nix", features = ["net", "socket"]}
pnet_packet = "0.31.0"
quick-error = "2.0.1"
socket2 = "0.4.4"
stderrlog = "0.5.1"
tokio = { version = "1.19.2", features = ["full"]}
tui = "0.18.0"

